# mac-bridge-mcp

./: .gitignore  com.jarle.mac-bridge-mcp.plist  config.example.json  pyproject.toml
src/mac_bridge_mcp/: server.py
