[project]
name = "mac-bridge-mcp"
version = "0.1.0"
description = "MCP server that bridges AI agents to local macOS capabilities"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "mypyllant>=0.9.9",
]

[project.scripts]
mac-bridge-mcp = "mac_bridge_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mac_bridge_mcp"]
